# LiveCDN

./: .gitignore  README.md  TASKS.md  TESTING.md  docker-compose.yml  go.mod  go.sum
agent-rust/: Cargo.toml  Dockerfile
agent-rust/src/: main.rs
agent-rust/src/config/: mod.rs
agent-rust/src/crypto/: mod.rs
agent-rust/src/disguise/: blog.html  mod.rs
agent-rust/src/healthcheck/: mod.rs
agent-rust/src/protocol/: mod.rs
agent-rust/src/relay/: backoff.rs  cascade_selector.rs  flv.rs  flv_output.rs  gop_cache.rs  mod.rs  packet_drop.rs
agent-rust/src/transport/: mod.rs  registry.rs
agent-rust/src/updater/: mod.rs
cmd/agent/: main.go
cmd/controller/: main.go  main_test.go
configs/: agent.toml  agent.yaml  controller.yaml
deploy/: build-binaries.sh  install.sh  uninstall.sh
deploy/ansible/: agent.toml.j2  playbook.yml
deploy/caddy/: Caddyfile
deploy/monitoring/: alerts.yml  grafana-dashboard.json
docker/: Dockerfile.agent  Dockerfile.controller
internal/agent/: agent.go  agent_test.go  relay.go
internal/common/: types.go  utils.go  utils_test.go
internal/controller/: admin.html  admin_html.go  audit.go  audit_test.go  bolt_store.go  config_compat_test.go  geo.go  hashring.go  hashring_test.go  keyrotate.go  latency_controller.go  mesh.go  mesh_test.go  metrics.go  scheduler.go  scheduler_test.go  server.go  sticky.go  store.go  store_test.go
internal/crypto/: crypto.go  crypto_test.go
internal/protocol/: protocol.go
origin/: srs-backup.conf  srs.conf
tests/e2e/: docker-compose.test.yml
web/: admin.html  player.html
(+1 files in other folders)
